<resources>

    <string name="app_name">Fitness Tracker</string>

    <string name="title_charts">Graficos</string>
    <string name="title_list">Lista</string>
    <string name="title_settings">Configurações</string>
    <string name="login">login</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="sign_up">Cadastrar</string>
    <string name="full_name">Nome completo</string>
    <string name="error_format_invalid">Formato inválido</string>
    <string name="error_too_short">Muito pequeno</string>
    <string name="reset_password_text">Precisamos do seu email, para enviarmos as instruções para redefinir a senha.</string>
    <string name="send">Enviar</string>
    <string name="logo_text">Fitness Tracker</string>
    <string name="create_account">Criar conta</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="user_or_password_invalid">Usuário ou senha inválidos!</string>
    <string name="signup_error">Não foi possível criar seu usuário agora, tente novamente mais tarde!</string>
    <string name="reset_password_error">Ops, ocorreu um erro, verifique se o email está correto e tente novamente!</string>
    <string name="reset_password_success">Foi enviado um email para resetar a senha</string>

    <string name="question_date">Data</string>
    <string name="question_neck">Pescoço</string>
    <string name="question_shoulders">Ombros</string>
    <string name="question_breastplate">Peitoral</string>
    <string name="question_waist">Cintura</string>
    <string name="question_abdomen">Abdômen</string>
    <string name="question_rightArm">Braço direito</string>
    <string name="question_leftArm">Braço esquerdo</string>
    <string name="question_rightLeg">Perna direita</string>
    <string name="question_leftLeg">Perna esquerda</string>
    <string name="question_rightCalf">Panturrilha direita</string>
    <string name="question_leftCalf">Panturrilha esquerda</string>
    <string name="question_weight">Peso</string>

    <string-array name="fisical_avaliation_itens">
        <item>@string/question_date</item>
        <item>@string/question_neck</item>
        <item>@string/question_shoulders</item>
        <item>@string/question_breastplate</item>
        <item>@string/question_waist</item>
        <item>@string/question_abdomen</item>
        <item>@string/question_rightArm</item>
        <item>@string/question_leftArm</item>
        <item>@string/question_rightLeg</item>
        <item>@string/question_leftLeg</item>
        <item>@string/question_rightCalf</item>
        <item>@string/question_leftCalf</item>
        <item>@string/question_weight</item>
    </string-array>

    <string name="preference_date">preference_date</string>
    <string name="preference_neck">preference_neck</string>
    <string name="preference_shoulders">preference_shoulders</string>
    <string name="preference_breastplate">preference_breastplate</string>
    <string name="preference_waist">preference_waist</string>
    <string name="preference_abdomen">preference_abdomen</string>
    <string name="preference_rightArm">preference_rightArm</string>
    <string name="preference_leftArm">preference_leftArm</string>
    <string name="preference_rightLeg">preference_rightLeg</string>
    <string name="preference_leftLeg">preference_leftLeg</string>
    <string name="preference_rightCalf">preference_rightCalf</string>
    <string name="preference_leftCalf">preference_leftCalf</string>
    <string name="preference_weight">preference_weight</string>

    <string-array name="preference_keys_array">
        <item>@string/preference_date</item>
        <item>@string/preference_neck</item>
        <item>@string/preference_shoulders</item>
        <item>@string/preference_breastplate</item>
        <item>@string/preference_waist</item>
        <item>@string/preference_abdomen</item>
        <item>@string/preference_rightArm</item>
        <item>@string/preference_leftArm</item>
        <item>@string/preference_rightLeg</item>
        <item>@string/preference_leftLeg</item>
        <item>@string/preference_rightCalf</item>
        <item>@string/preference_leftCalf</item>
        <item>@string/preference_weight</item>
    </string-array>

    <string name="title_activity_menu">Settings</string>

    <!-- Preference Titles -->
    <string name="measures_header">Medidas para acompanhar</string>
    <string name="user_header">Usuáio</string>

    <!-- User Preferences -->
    <string name="logout">Sair</string>

    <!-- Measures Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="atention">Atenção</string>
    <string name="deleteDialogMessage">Dejesa mesmo deletetar a avaliação de</string>
    <string name="yes">sim</string>
    <string name="no">não</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget">Você ainda não possui registros, ao adicionar um registro ele será exibido aqui!</string>

</resources>
