<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user_header">

        <Preference
            app:key="@string/logout"
            app:title="@string/logout" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/measures_header">

        <CheckBoxPreference
            app:key="@string/preference_neck"
            app:title="@string/question_neck"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_shoulders"
            app:title="@string/question_shoulders"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_breastplate"
            app:title="@string/question_breastplate"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_waist"
            app:title="@string/question_waist"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_abdomen"
            app:title="@string/question_abdomen"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_rightArm"
            app:title="@string/question_rightArm"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_leftArm"
            app:title="@string/question_leftArm"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_rightLeg"
            app:title="@string/question_rightLeg"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_leftLeg"
            app:title="@string/question_leftLeg"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_rightCalf"
            app:title="@string/question_rightCalf"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_leftCalf"
            app:title="@string/question_leftCalf"
            app:defaultValue="true" />

        <CheckBoxPreference
            app:key="@string/preference_weight"
            app:title="@string/question_weight"
            app:defaultValue="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
