<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="br.com.fitnesstracker.view.resetpassword.ResetPasswordViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"
                android:padding="@dimen/back_button_padding"
                android:layout_marginTop="8dp"
                android:onClick="backButton"
                android:src="@drawable/ic_left_arrow"
                android:tint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <br.com.fitnesstracker.util.LogoTextView
                android:id="@+id/logoTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/logo_text"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/form_left_margin"
                android:layout_marginTop="@dimen/form_itens_separation"
                android:layout_marginEnd="@dimen/form_right_margin"
                android:gravity="center"
                android:text="@string/reset_password_text"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logoTextView3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/form_left_margin"
                android:layout_marginTop="@dimen/form_itens_separation"
                android:layout_marginEnd="@dimen/form_right_margin"
                app:error="@{viewModel.loginModel.emailError}"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.loginModel.email}"
                    app:onFocus="@{viewModel.getFocusChangeEmail()}"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/form_left_margin"
                android:layout_marginTop="@dimen/form_itens_separation"
                android:layout_marginEnd="@dimen/form_right_margin"
                android:background="@color/colorPrimaryDark"
                android:onClick="@{() -> viewModel.requestResetPassword()}"
                android:text="@string/send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

            <include
                layout="@layout/generic_loading"
                bind:isVisible="@{viewModel.isLoading}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>